--- a/Chat/package.json
+++ b/Chat/package.json
@@ -12,6 +12,7 @@
         "socket.io": "^4.7.2"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.7",
         "nodemon": "^3.0.2",
         "tailwindcss": "^3.3.6"
     }
