--- a/Random_Chat/package.json
+++ b/Random_Chat/package.json
@@ -1,11 +1,11 @@
 {
   "name": "random_chat",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +16,6 @@
     "mysql": "^2.18.1",
     "nodemon": "^3.0.2",
     "socket.io": "^4.7.2"
-  }
+  },
+  "description": ""
 }
